@@ -151,7 +151,8 @@ AT_BANNER([Regression Tests])
 AT_SETUP([Bug 1])
 AT_CHECK_LOLA
 AT_CHECK([cp TESTFILES/bug1.* .])
-AT_CHECK([WENDY bug1.owfn --fionaFormat --og --verbose],0,ignore,ignore)
+AT_CHECK([WENDY bug1.owfn --fionaFormat --og --verbose],0,ignore,stderr)
+AT_CHECK([GREP -q "wendy: 2 nodes left" stderr],0)
 AT_CHECK([FIONA -tequivalence bug1.og bug1.fiona.og],0,ignore,ignore)
 AT_KEYWORDS(bug)
 AT_CLEANUP
@@ -159,7 +160,8 @@ AT_CLEANUP
 AT_SETUP([Bug 2])
 AT_CHECK_LOLA
 AT_CHECK([cp TESTFILES/bug2.* .])
-AT_CHECK([WENDY bug2.owfn --fionaFormat --og --verbose],0,ignore,ignore)
+AT_CHECK([WENDY bug2.owfn --fionaFormat --og --verbose],0,ignore,stderr)
+AT_CHECK([GREP -q "wendy: 1 nodes left" stderr],0)
 AT_CHECK([FIONA -tequivalence bug2.og bug2.fiona.og],0,ignore,ignore)
 AT_KEYWORDS(bug)
 AT_CLEANUP
@@ -167,7 +169,8 @@ AT_CLEANUP
 AT_SETUP([Bug 3])
 AT_CHECK_LOLA
 AT_CHECK([cp TESTFILES/bug3.* .])
-AT_CHECK([WENDY bug3.owfn --fionaFormat --og --verbose],0,ignore,ignore)
+AT_CHECK([WENDY bug3.owfn --fionaFormat --og --verbose],0,ignore,stderr)
+AT_CHECK([GREP -q "wendy: 1 nodes left" stderr],0)
 AT_CHECK([FIONA -tequivalence bug3.og bug3.fiona.og],0,ignore,ignore)
 AT_KEYWORDS(bug)
 AT_CLEANUP
@@ -175,7 +178,8 @@ AT_CLEANUP
 AT_SETUP([Bug 4])
 AT_CHECK_LOLA
 AT_CHECK([cp TESTFILES/bug4.* .])
-AT_CHECK([WENDY bug4.owfn --fionaFormat --og --verbose],0,ignore,ignore)
+AT_CHECK([WENDY bug4.owfn --fionaFormat --og --verbose],0,ignore,stderr)
+AT_CHECK([GREP -q "wendy: 3 nodes left" stderr],0)
 AT_CHECK([FIONA -tequivalence bug4.og bug4.fiona.og],0,ignore,ignore)
 AT_KEYWORDS(bug)
 AT_CLEANUP
@@ -183,7 +187,8 @@ AT_CLEANUP
 AT_SETUP([Bug 5])
 AT_CHECK_LOLA
 AT_CHECK([cp TESTFILES/bug5.* .])
-AT_CHECK([WENDY bug5.owfn --fionaFormat --og --verbose],0,ignore,ignore)
+AT_CHECK([WENDY bug5.owfn --fionaFormat --og --verbose],0,ignore,stderr)
+AT_CHECK([GREP -q "wendy: 4 nodes left" stderr],0)
 AT_CHECK([FIONA -tequivalence bug5.og bug5.fiona.og],0,ignore,ignore)
 AT_KEYWORDS(bug)
 AT_CLEANUP
@@ -191,7 +196,8 @@ AT_CLEANUP
 AT_SETUP([Bug 6])
 AT_CHECK_LOLA
 AT_CHECK([cp TESTFILES/bug6.* .])
-AT_CHECK([WENDY bug6.owfn --fionaFormat --og --verbose],0,ignore,ignore)
+AT_CHECK([WENDY bug6.owfn --fionaFormat --og --verbose],0,ignore,stderr)
+AT_CHECK([GREP -q "wendy: 1 nodes left" stderr],0)
 AT_CHECK([FIONA -tequivalence bug6.og bug6.fiona.og],0,ignore,ignore)
 AT_KEYWORDS(bug)
 AT_CLEANUP
@@ -199,7 +205,7 @@ AT_CLEANUP
 AT_SETUP([Bug 7])
 AT_CHECK_LOLA
 AT_CHECK([cp TESTFILES/bug7.* .])
-AT_CHECK([WENDY bug7.owfn --fionaFormat --og --verbose],0,ignore,ignore)
+AT_CHECK([WENDY bug7.owfn --fionaFormat --og --verbose],0,ignore,stderr)
 AT_CHECK([FIONA -tequivalence bug7.og bug7.fiona.og],0,ignore,ignore)
 AT_KEYWORDS(bug)
 AT_CLEANUP
@@ -207,7 +213,7 @@ AT_CLEANUP
 AT_SETUP([Bug 8])
 AT_CHECK_LOLA
 AT_CHECK([cp TESTFILES/bug8.* .])
-AT_CHECK([WENDY bug8.owfn --fionaFormat --og --verbose],0,ignore,ignore)
+AT_CHECK([WENDY bug8.owfn --fionaFormat --og --verbose],0,ignore,stderr)
 AT_CHECK([FIONA -tequivalence bug8.og bug8.fiona.og],0,ignore,ignore)
 AT_KEYWORDS(bug)
 AT_CLEANUP
@@ -215,7 +221,8 @@ AT_CLEANUP
 AT_SETUP([Bug 9])
 AT_CHECK_LOLA
 AT_CHECK([cp TESTFILES/bug9.* .])
-AT_CHECK([WENDY bug9.owfn --fionaFormat --og --verbose],0,ignore,ignore)
+AT_CHECK([WENDY bug9.owfn --fionaFormat --og --verbose],0,ignore,stderr)
+AT_CHECK([GREP -q "wendy: 13 nodes left" stderr],0)
 AT_CHECK([FIONA -tequivalence bug9.og bug9.fiona.og],0,ignore,ignore)
 AT_KEYWORDS(bug)
 AT_CLEANUP
@@ -223,14 +230,16 @@ AT_CLEANUP
 AT_SETUP([Bug 13651 (https://gna.org/bugs/?13651)])
 AT_CHECK_LOLA
 AT_CHECK([cp TESTFILES/bug13651.owfn .])
-AT_CHECK([WENDY bug13651.owfn --verbose],0,ignore,ignore)
+AT_CHECK([WENDY bug13651.owfn --verbose],0,ignore,stderr)
+AT_CHECK([GREP -q "wendy: 2 nodes left" stderr],0)
 AT_KEYWORDS(bug)
 AT_CLEANUP
 
 AT_SETUP([Bug 13718 (https://gna.org/bugs/?13718)])
 AT_CHECK_LOLA
 AT_CHECK([cp TESTFILES/bug13718.owfn .])
-AT_CHECK([WENDY bug13718.owfn --verbose --og --formula=2],0,ignore,ignore)
+AT_CHECK([WENDY bug13718.owfn --verbose --og --formula=2],0,ignore,stderr)
+AT_CHECK([GREP -q "wendy: 8 nodes left" stderr],0)
 AT_CHECK([GREP -c ":: S" bug13718.og],0,[4
 ])
 AT_CHECK([GREP -c ":: F" bug13718.og],0,[4
@@ -241,7 +250,8 @@ AT_CLEANUP
 AT_SETUP([Bug 13903 (https://gna.org/bugs/?13903)])
 AT_CHECK_LOLA
 AT_CHECK([cp TESTFILES/myCoffee.owfn .])
-AT_CHECK([WENDY myCoffee.owfn --verbose --og --tmpfile=foo-XXXXXX],0,ignore,ignore)
+AT_CHECK([WENDY myCoffee.owfn --verbose --og --tmpfile=foo-XXXXXX],0,ignore,stderr)
+AT_CHECK([GREP -q "wendy: 7 nodes left" stderr],0)
 AT_CHECK([test -f foo-*.lola])
 AT_KEYWORDS(bug)
 AT_CLEANUP
@@ -250,9 +260,11 @@ AT_SETUP([Bug 13994 (https://gna.org/bugs/?13994)])
 AT_CHECK_LOLA
 AT_CHECK([cp TESTFILES/bug13994-1.owfn .])
 AT_CHECK([WENDY bug13994-1.owfn --verbose],0,ignore,stderr)
+AT_CHECK([GREP -q "wendy: 2 nodes left" stderr],0)
 AT_CHECK([GREP -q "wendy: net is controllable: NO" stderr],0)
 AT_CHECK([cp TESTFILES/bug13994-2.owfn .])
 AT_CHECK([WENDY bug13994-2.owfn --verbose],0,ignore,stderr)
+AT_CHECK([GREP -q "wendy: 2 nodes left" stderr],0)
 AT_CHECK([GREP -q "wendy: net is controllable: NO" stderr],0)
 AT_KEYWORDS(bug)
 AT_CLEANUP
@@ -260,7 +272,8 @@ AT_CLEANUP
 AT_SETUP([Bug 14025 (https://gna.org/bugs/?14025)])
 AT_CHECK_LOLA
 AT_CHECK([cp TESTFILES/bug14025.owfn .])
-AT_CHECK([WENDY bug14025.owfn --verbose --dot --og],0,ignore,ignore)
+AT_CHECK([WENDY bug14025.owfn --verbose --dot --og],0,ignore,stderr)
+AT_CHECK([GREP -q "wendy: 5 nodes left" stderr],0)
 AT_CHECK([GREP -c "\->" bug14025.dot],0,[5
 ])
 AT_KEYWORDS(bug)
@@ -274,7 +287,8 @@ AT_BANNER([Operating Guidelines])
 AT_SETUP([Coffee Automaton])
 AT_CHECK_LOLA
 AT_CHECK([cp TESTFILES/myCoffee.* .])
-AT_CHECK([WENDY myCoffee.owfn --fionaFormat --og --verbose],0,ignore,ignore)
+AT_CHECK([WENDY myCoffee.owfn --fionaFormat --og --verbose],0,ignore,stderr)
+AT_CHECK([GREP -q "wendy: 7 nodes left" stderr],0)
 AT_CHECK([FIONA -tequivalence myCoffee.og myCoffee.fiona.og],0,ignore,ignore)
 AT_KEYWORDS(og)
 AT_CLEANUP
@@ -282,7 +296,8 @@ AT_CLEANUP
 AT_SETUP([Dining Philosophers])
 AT_CHECK_LOLA
 AT_CHECK([cp TESTFILES/phcontrol3.unf.* .])
-AT_CHECK([WENDY phcontrol3.unf.owfn --fionaFormat --og --verbose],0,ignore,ignore)
+AT_CHECK([WENDY phcontrol3.unf.owfn --fionaFormat --og --verbose],0,ignore,stderr)
+AT_CHECK([GREP -q "wendy: 67 nodes left" stderr],0)
 AT_CHECK([FIONA -tequivalence phcontrol3.unf.og phcontrol3.unf.fiona.og],0,ignore,ignore)
 AT_KEYWORDS(og)
 AT_CLEANUP
@@ -290,7 +305,8 @@ AT_CLEANUP
 AT_SETUP([Purchase Order Process])
 AT_CHECK_LOLA
 AT_CHECK([cp TESTFILES/PO.* .])
-AT_CHECK([WENDY PO.owfn --fionaFormat --og --verbose],0,ignore,ignore)
+AT_CHECK([WENDY PO.owfn --fionaFormat --og --verbose],0,ignore,stderr)
+AT_CHECK([GREP -q "wendy: 168 nodes left" stderr],0)
 AT_CHECK([FIONA -tequivalence PO.og PO.fiona.og],0,ignore,ignore)
 AT_KEYWORDS(og)
 AT_CLEANUP
@@ -298,7 +314,8 @@ AT_CLEANUP
 AT_SETUP([Sequence])
 AT_CHECK_LOLA
 AT_CHECK([cp TESTFILES/sequence10.* .])
-AT_CHECK([WENDY sequence10.owfn --fionaFormat --og --verbose],0,ignore,ignore)
+AT_CHECK([WENDY sequence10.owfn --fionaFormat --og --verbose],0,ignore,stderr)
+AT_CHECK([GREP -q "wendy: 1024 nodes left" stderr],0)
 AT_CHECK([FIONA -tequivalence sequence10.og sequence10.fiona.og],0,ignore,ignore)
 AT_KEYWORDS(og)
 AT_CLEANUP
@@ -306,7 +323,8 @@ AT_CLEANUP
 AT_SETUP([SMTP Protocol])
 AT_CHECK_LOLA
 AT_CHECK([cp TESTFILES/smtp3.* .])
-AT_CHECK([WENDY smtp3.owfn --fionaFormat --og --verbose],0,ignore,ignore)
+AT_CHECK([WENDY smtp3.owfn --fionaFormat --og --verbose],0,ignore,stderr)
+AT_CHECK([GREP -q "wendy: 474 nodes left" stderr],0)
 AT_CHECK([FIONA -tequivalence smtp3.og smtp3.fiona.og],0,ignore,ignore)
 AT_KEYWORDS(og)
 AT_CLEANUP
@@ -314,7 +332,8 @@ AT_CLEANUP
 AT_SETUP([Travel Service])
 AT_CHECK_LOLA
 AT_CHECK([cp TESTFILES/T2.* .])
-AT_CHECK([WENDY T2.owfn --fionaFormat --og --verbose --messagebound=2],0,ignore,ignore)
+AT_CHECK([WENDY T2.owfn --fionaFormat --og --verbose --messagebound=2],0,ignore,stderr)
+AT_CHECK([GREP -q "wendy: 192 nodes left" stderr],0)
 AT_CHECK([FIONA -tequivalence T2.og T2.fiona.og],0,ignore,ignore)
 AT_KEYWORDS(og)
 AT_CLEANUP
@@ -322,7 +341,8 @@ AT_CLEANUP
 AT_SETUP([ZEUS Seller Service])
 AT_CHECK_LOLA
 AT_CHECK([cp TESTFILES/zeus.* .])
-AT_CHECK([WENDY zeus.owfn --fionaFormat --og --verbose],0,ignore,ignore)
+AT_CHECK([WENDY zeus.owfn --fionaFormat --og --verbose],0,ignore,stderr)
+AT_CHECK([GREP -q "wendy: 6 nodes left" stderr],0)
 AT_CHECK([FIONA -tequivalence zeus.og zeus.fiona.og],0,ignore,ignore)
 AT_KEYWORDS(og)
 AT_CLEANUP
@@ -473,8 +493,8 @@ AT_BANNER([Synchronous Communication])
 AT_SETUP([Philosophers])
 AT_CHECK_LOLA
 AT_CHECK([cp TESTFILES/phil5.owfn .])
-AT_CHECK([WENDY phil5.owfn --og --verbose],0,ignore,ignore)
-AT_CHECK([GREP -q "721 nodes" phil5.og])
+AT_CHECK([WENDY phil5.owfn --og --verbose],0,ignore,stderr)
+AT_CHECK([GREP -q "wendy: 721 nodes left" stderr],0)
 AT_CHECK([GREP -c "\->" phil5.og],0,[7200
 ])
 AT_KEYWORDS(synchronous)
@@ -483,8 +503,8 @@ AT_CLEANUP
 AT_SETUP([Car Reservation])
 AT_CHECK_LOLA
 AT_CHECK([cp TESTFILES/carreservation_with_engine.owfn .])
-AT_CHECK([WENDY carreservation_with_engine.owfn --og --verbose],0,ignore,ignore)
-AT_CHECK([GREP -q "309 nodes" carreservation_with_engine.og])
+AT_CHECK([WENDY carreservation_with_engine.owfn --og --verbose],0,ignore,stderr)
+AT_CHECK([GREP -q "wendy: 309 nodes left" stderr],0)
 AT_CHECK([GREP -c "\->" carreservation_with_engine.og],0,[6510
 ])
 AT_KEYWORDS(synchronous)
@@ -493,8 +513,8 @@ AT_CLEANUP
 AT_SETUP([Test net])
 AT_CHECK_LOLA
 AT_CHECK([cp TESTFILES/test-sync.owfn .])
-AT_CHECK([WENDY test-sync.owfn --og --verbose],0,ignore,ignore)
-AT_CHECK([GREP -q "13 nodes" test-sync.og])
+AT_CHECK([WENDY test-sync.owfn --og --verbose],0,ignore,stderr)
+AT_CHECK([GREP -q "wendy: 13 nodes left" stderr],0)
 AT_CHECK([GREP -c "\->" test-sync.og],0,[154
 ])
 AT_KEYWORDS(synchronous)
